fixed footer not being stuck to bottom of page with the help of some css code

--- a/webapp/src/app/app.component.scss
+++ b/webapp/src/app/app.component.scss
@@ -7,3 +7,19 @@
 .active:hover {
   background: #e6e9f7;
 }
+
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+#app {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+footer {
+  margin-top: auto;
+}
